--- a/index.html
+++ b/index.html
@@ -6,14 +6,10 @@
 </head>
 
 <body>
-    <h2>Which is your favorite programming language?</h2>
-    <form>
-        <input type="radio" name="language" value="Python"> Python<br>
-        <input type="radio" name="language" value="JavaScript"> JavaScript<br>
-        <input type="radio" name="language" value="Java"> Java<br>
-        <input type="radio" name="language" value="C++"> C++<br><br>
-        <button type="submit">Vote</button>
-    </form>
+    <div class="text-center">
+        <h1 class="display-4">Kavya is Here</h1>
+        <p>Welcome to our .NET web app!</p>
+    </div>
 </body>
 
 </html>
